--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,6 @@ body::before { /*avant contenu principal*/
     z-index: -99;
 }
 
-
 /*Header*/
 h1 {
     text-align: center;
@@ -93,8 +92,27 @@ section div {
                 0 0 25px rgba(255, 255, 255, 0.1);  
 }
 
-/* .case {
-    width: 30%;    
+/*Popup*/
+.popup {
+    display: none;
+    position: fixed;
+    /* position: relative; */
+    /* padding: 0.5% 6% 6% 6%;
+    border-radius: 15px;
+    background-color: rgba(128, 145, 165, 0.8);
+    color: #F7E0A3;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin:5%;    
+    font-size: 1.4em;
+    z-index: 10; */
+}
+
+/* class pour X fermeture
+.close {
+    text-align: right;
+    padding-bottom: 5%;
 } */
 
 
