--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,20 @@ section div {
     padding-bottom: 3%;
 }
 
+/*particles*/
+#particleJS {
+    position: fixed;
+    height:100vh;
+    width: 100vw;
+    mix-blend-mode:screen;
+    z-index: -1;
+}
+
+#etoiles {
+    height:100vh;
+    mix-blend-mode:screen; 
+    z-index: -3;
+}
 
 /* @keyframes flip {
     0% {
